--- a/sections/3_fusionize.tex
+++ b/sections/3_fusionize.tex
@@ -57,7 +57,7 @@ is a set of tasks executed as part of the function.
 The initial concept for implementation with Nuclio was to develop a new function
 processor that would manage the inlining of functions. These would be selectable
 during the function deployment phase. However, the underlying platform component
-of Nuclio and its k8s (k8s) implementation does not account for the
+of Nuclio and its Kubernetes (k8s) implementation does not account for the
 possibility of mapping multiple tasks to a single function. A consultation with
 the Nuclio developers revealed that a complete rewriting of the platform would
 be required to enable this functionality. This proved unrealistic within the
