added tableof contents with depth limit

--- a/paper.tex
+++ b/paper.tex
@@ -65,7 +65,8 @@
     Wow, what an abstract!
 \end{abstract}
 
-%\tableofcontents
+\setcounter{tocdepth}{1}
+\tableofcontents
 
 \input{sections/1_introduction}
 \input{sections/2_nuclio}
