--- a/paper.tex
+++ b/paper.tex
@@ -90,7 +90,7 @@
 \begin{center}
     \begin{tabular}{l l} \toprule
         Name & Sections \\ \midrule
-        Valentin Carl & \ref{sec:sand}, \ref{sec:evaluation} \\
+        Valentin Carl & \ref{sec:sand}, \ref{sec:evaluation}, \ref{sec:discussion} \\
         Daniel Gottschling & \ref{sec:sand}, \ref{sec:evaluation} \\
         Jonas Heisterberg & \\
         David Schmidt & \\
