--- a/sections/4_sand.tex
+++ b/sections/4_sand.tex
@@ -27,7 +27,7 @@ The platform consists of the following components.
 
 \subsubsection{Application Sandboxing}\label{subsub:application_sandboxing}
 
-\begin{figure}
+\begin{figure}[!h]
     \centering
     \includegraphics[width=\linewidth]{figures/sand_architecture.pdf}
     \caption{
@@ -80,7 +80,7 @@ Using the same abstraction level as SAND—as in using containers for applicatio
 Taking this into account, we choose Kubernetes pods as our means of application sandboxing.
 
 % TODO maybe remove the arrows
-\begin{figure}
+\begin{figure}[!h]
     \centering
     \includegraphics[width=\linewidth]{figures/sandbox.pdf}
     \caption{
