--- a/bibliography.bib
+++ b/bibliography.bib
@@ -128,4 +128,20 @@
   year={2022}
 }
 
-
+@inproceedings{xfaas,
+author = {Sahraei, Alireza and Demetriou, Soteris and Sobhgol, Amirali and Zhang, Haoran and Nagaraja, Abhigna and Pathak, Neeraj and Joshi, Girish and Souza, Carla and Huang, Bo and Cook, Wyatt and Golovei, Andrii and Venkat, Pradeep and Mcfague, Andrew and Skarlatos, Dimitrios and Patel, Vipul and Thind, Ravinder and Gonzalez, Ernesto and Jin, Yun and Tang, Chunqiang},
+title = {XFaaS: Hyperscale and Low Cost Serverless Functions at Meta},
+year = {2023},
+isbn = {9798400702297},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3600006.3613155},
+doi = {10.1145/3600006.3613155},
+abstract = {Function-as-a-Service (FaaS) has become a popular programming paradigm in Serverless Computing. As the responsibility of resource provisioning shifts from users to cloud providers, the ease of use of FaaS for users may come at the expense of extra hardware costs for cloud providers. Currently, there is no report on how FaaS platforms address this challenge and the level of hardware utilization they achieve.This paper presents the FaaS platform called XFaaS in Meta's hyperscale private cloud. XFaaS currently processes trillions of function calls per day on more than 100,000 servers. We describe a set of optimizations that help XFaaS achieve a daily average CPU utilization of 66\%. Based on our anecdotal knowledge, this level of utilization might be several times higher than that of typical FaaS platforms.Specifically, to eliminate the cold start time of functions, XFaaS strives to approximate the effect that every worker can execute every function immediately. To handle load spikes without over-provisioning resources, XFaaS defers the execution of delay-tolerant functions to off-peak hours and globally dispatches function calls across datacenter regions. To prevent functions from overloading downstream services, XFaaS uses a TCP-like congestion-control mechanism to pace the execution of functions.},
+booktitle = {Proceedings of the 29th Symposium on Operating Systems Principles},
+pages = {231–246},
+numpages = {16},
+keywords = {measurement, systems, cloud, serverless, FaaS},
+location = {, Koblenz, Germany, },
+series = {SOSP '23}
+}
