--- a/paper.tex
+++ b/paper.tex
@@ -32,6 +32,8 @@
     breaklines=true
 }
 
+% don't judge
+\hbadness=10000
 
 % group citations
 \renewcommand{\citepunct}{,\penalty\citepunctpenalty\,}
